--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "gh-pages": "^6.1.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "react-youtube": "^10.1.0",
+    "sort-by": "^1.2.0",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
