--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "react-youtube": "^10.1.0",
+    "reactjs-popup": "^2.0.6",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
