--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
     "gh-pages": "^6.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-youtube": "^10.1.0",
     "sort-by": "^1.2.0",
