--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.2",
     "react-youtube": "^10.1.0",
+    "reactjs-popup": "^2.0.6",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
